--- a/universe.ipynb
+++ b/universe.ipynb
@@ -358,7 +358,7 @@
     "colors = ['yellowgreen', 'gold', 'lightskyblue', 'lightcoral', 'magenta']\n",
     "plt.pie(sizes, labels=labels, colors=colors, autopct='%1.1f%%', startangle=90)\n",
     "plt.axis('equal')\n",
-    "plt.title('Percentage of different masses by # of different functional groups with this (masses,fg)')\n",
+    "plt.title('Percentage of different (masses,fg) by # of different functional groups with this (masses,fg)')\n",
     "plt.show()\n",
     "\n",
     "# > 10 structures\n",
@@ -390,7 +390,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -404,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
